--- a/Src/Client/Assembly-CSharp.csproj
+++ b/Src/Client/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Login.cs" />
     <Compile Include="Assets\Scripts\Network\NetClient.cs" />
     <Compile Include="Assets\Scripts\Scene\SceneManager.cs" />
     <Compile Include="Assets\Scripts\Utilities\GameUtil.cs" />
@@ -77,19 +78,19 @@
     <None Include="Assets\Shader\MyMobile VertexLit Diffuse.shader" />
     <None Include="Assets\References\protobuf-net.xml" />
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PackageManagerUI.Editor">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/ScriptAssemblies/Unity.PackageManagerUI.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.CollabProxy.Editor">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/ScriptAssemblies/Unity.CollabProxy.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/ScriptAssemblies/Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.DataPrivacy">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/ScriptAssemblies/Unity.Analytics.DataPrivacy.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.AIModule">
       <HintPath>E:/Unity2018.3.11/Editor/Data/Managed/UnityEngine/UnityEngine.AIModule.dll</HintPath>
@@ -293,28 +294,28 @@
       <HintPath>E:/Unity2018.3.11/Editor/Data/UnityExtensions/Unity/UnitySpatialTracking/RuntimeEditor/UnityEngine.SpatialTracking.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Assets/JsonDotNet/Assemblies/Standalone/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Common">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Assets/References/Common.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Assets/References/Common.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Assets/References/log4net.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Assets/References/log4net.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Assets/References/protobuf-net.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Assets/References/protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="Protocol">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Assets/References/Protocol.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Assets/References/Protocol.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Editor">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.StandardEvents">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.StandardEvents.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Analytics.Tracker">
-      <HintPath>E:/EXWorld/Test01/mmorpg/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
+      <HintPath>E:/EXWorld/mmowork/Src/Client/Library/PackageCache/com.unity.analytics@3.2.2/Unity.Analytics.Tracker.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
       <HintPath>E:/Unity2018.3.11/Editor/Data/MonoBleedingEdge/lib/mono/unity/mscorlib.dll</HintPath>
